Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34613

QDBusConnection::connectToBus fails dbus API check when q_dbus_bus_register fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.7.0 FF
    • 4.7.3, 6.6.0
    • D-Bus
    • None
    • I encountered this issue while using QtDBus on Windows but I'm sure this can also happen on any platform when connecting to a bus by address.
    • d3860918e (dev)
    • Foundations Sprint 96

    Description

      When the connection is established but the registration fails (for example the maximum number of connections was reached) QtDBus calls q_dbus_connection_unref without calling q_dbus_connection_close if the connection is connected.

      This will trigger the following failed check in dbus (dbus-connection.c:2792).

      "The last reference on a connection was dropped without closing the connection. This is a bug in an application. See dbus_connection_unref() documentation for details."

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ievgenii.meshcheriakov Ievgenii Meshcheriakov
            cristian.onet Cristian Oneț
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes